RIP-v10.1.1- /mobile overflow fix in progress

--- a/css/styles.css
+++ b/css/styles.css
@@ -1091,7 +1091,7 @@ h5 {
 
 .touched-pressed:active {
   transform: scale(0.95);
-  border   : solid 0.01px #c8c8e725;
+  border   : solid 0.01px #c8c8e72a;
 }
 
 /* page-content */
